--- a/vector/build.gradle
+++ b/vector/build.gradle
@@ -256,12 +256,12 @@ dependencies {
     /************* Matrix SDK management **************/
     // update settings.gradle
     // use the matrix SDK as external dependency
-    implementation 'com.github.matrix-org:matrix-android-sdk:v0.9.35'
+    //implementation 'com.github.matrix-org:matrix-android-sdk:v0.9.35'
     // use the matrix SDK as a sub project
     // you have to uncomment some lines in settings.gradle
-    //implementation project(':matrix-sdk')
-    //implementation project(':matrix-sdk-crypto')
-    //implementation project(':matrix-sdk-core')
+    implementation project(':matrix-sdk')
+    implementation project(':matrix-sdk-crypto')
+    implementation project(':matrix-sdk-core')
 
     /************* jitsi **************/
     implementation('org.jitsi.react:jitsi-meet-sdk:2.2.2')
